🦃👘 Checkpoint ./public/style.css:9251183/68 ./public/index.html:9251183/168

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           
           <input class="usernameInput" type="text" maxlength="14" />
           
-          <h4 class="subtitle">(please don't pick somone else's name)</h4>
+          <h4 class="subtitle">(please don't pick someone else's name and make it school appropriate)</h4>
         </div>
       </li>
     </ul>
