--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
           <input class="usernameInput" type="text" maxlength="14" />
           
           <h4 class="subtitle">(please don't pick someone else's name and make it school appropriate)</h4>
+          <img src="https://compote.slate.com/images/697b023b-64a5-49a0-8059-27b963453fb1.gif" alt="GIFs on TV: How Broad City, The Simpsons, You, and more used GIFs to strange and paradoxical effect."/>
         </div>
       </li>
     </ul>
