--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Tasis Chat</title>
     <link rel="stylesheet" href="style.css" />
+    
+    <link rel="shortcut icon" type="image/x-icon" href="tais_chat_logo_FGo_icon.ico" />
   </head>
   <body>
     <ul class="pages">
