--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    
-    <meta charset="UTF-8" />
-    <title>Tasis Chat</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <ul class="pages">
-      <li class="chat page">
-        <div class="chatArea">
-          <ul class="messages"></ul>
-        </div>
-        <input class="inputMessage" placeholder="Type here..." />
-      </li>
-      <li class="login page">
-        <div class="form">
-          <h3 class="title">What's your nickname/username?</h3>
-
-          <input class="usernameInput" type="text" maxlength="14" />
-
-          <h4 class="subtitle">
-            (please don't pick someone else's name and make it school
-            appropriate)
-          </h4>
-        </div>
-      </li>
-    </ul>
-
-    <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/main.js"></script>
-  </body>
-</html>
+<script language="javascript">
+  <!--
+  // == Begin Free HTML Source Code Obfuscation Protection from https://snapbuilder.com == //
+  document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%20%20%3C%68%65%61%64%3E%0A%20%20%20%20%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%20%2F%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%54%61%73%69%73%20%43%68%61%74%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%73%74%79%6C%65%2E%63%73%73%22%20%2F%3E%0A%20%20%3C%2F%68%65%61%64%3E%0A%20%20%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%75%6C%20%63%6C%61%73%73%3D%22%70%61%67%65%73%22%3E%0A%20%20%20%20%20%20%3C%6C%69%20%63%6C%61%73%73%3D%22%63%68%61%74%20%70%61%67%65%22%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%68%61%74%41%72%65%61%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%75%6C%20%63%6C%61%73%73%3D%22%6D%65%73%73%61%67%65%73%22%3E%3C%2F%75%6C%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%4D%65%73%73%61%67%65%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%54%79%70%65%20%68%65%72%65%2E%2E%2E%22%20%2F%3E%0A%20%20%20%20%20%20%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%6C%69%20%63%6C%61%73%73%3D%22%6C%6F%67%69%6E%20%70%61%67%65%22%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%66%6F%72%6D%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%68%33%20%63%6C%61%73%73%3D%22%74%69%74%6C%65%22%3E%57%68%61%74%27%73%20%79%6F%75%72%20%6E%69%63%6B%6E%61%6D%65%2F%75%73%65%72%6E%61%6D%65%3F%3C%2F%68%33%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%63%6C%61%73%73%3D%22%75%73%65%72%6E%61%6D%65%49%6E%70%75%74%22%20%74%79%70%65%3D%22%74%65%78%74%22%20%6D%61%78%6C%65%6E%67%74%68%3D%22%31%34%22%20%2F%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%3C%68%34%20%63%6C%61%73%73%3D%22%73%75%62%74%69%74%6C%65%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%28%70%6C%65%61%73%65%20%64%6F%6E%27%74%20%70%69%63%6B%20%73%6F%6D%65%6F%6E%65%20%65%6C%73%65%27%73%20%6E%61%6D%65%20%61%6E%64%20%6D%61%6B%65%20%69%74%20%73%63%68%6F%6F%6C%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%70%70%72%6F%70%72%69%61%74%65%29%0A%20%20%20%20%20%20%20%20%20%20%3C%2F%68%34%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%3C%2F%6C%69%3E%0A%20%20%20%20%3C%2F%75%6C%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%6F%64%65%2E%6A%71%75%65%72%79%2E%63%6F%6D%2F%6A%71%75%65%72%79%2D%32%2E%32%2E%32%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2F%73%6F%63%6B%65%74%2E%69%6F%2F%73%6F%63%6B%65%74%2E%69%6F%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2F%6D%61%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E%0A%0A'));
+  //-->
+</script>
