Rewound to commit 713c4967a22a367423b9779d0361853ef3910d59 + 0 edits

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  
   <head>
+    
     <meta charset="UTF-8" />
     <title>Tasis Chat</title>
-    <link rel="icon" href="https://cdn.glitch.com/82587bdf-a6c9-41e1-ad71-6d0f698544cb%2Ftasis_chat_logo_FGo_icon.ico?v=1604833533204">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <ul class="pages">
