⛄️🎌 Checkpoint ./public/index.html:9251183/25 ./public/style.css:9251183/5

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             (please don't pick someone else's name and make it school
             appropriate)
           </h4>
-          <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+          <a href="https://www.w3schools.com/">Terms</a>
         </div>
       </li>
     </ul>
