👨‍👨‍👦⚽️ Checkpoint ./public/index.html:9251183/137 ./public/style.css:9251183/114

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
             (please don't pick someone else's name and make it school
             appropriate)
           </h4>
-          <a href="https://www.w3schools.com/">Terms</a>
+          <a href="https://terms-for-tasis-chat.glitch.me/">Terms</a>
+          
+          
         </div>
       </li>
     </ul>
