--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
         <input class="inputMessage" placeholder="Type here..." />
       </li>
       <li class="login page">
+        <button class="button">Theme Swap</button>
         <div class="form">
           <h3 class="title">What's your nickname/username?</h3>
 
-          <input class="usernameInput" type="text" maxlength="14" />
-
+          <input class="usernameInput" type="text" maxlength="14" />    
+      
           <h4 class="subtitle">
             (please don't pick someone else's name and make it school
             appropriate)
