🛩🛰 Checkpoint ./public/index.html:22440109/72 ./public/style.css:22440109/83

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
     <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
   </div>
 </div>
         </div>
