☔️🌵 Checkpoint ./public/index.html:22440109/43

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <button class="dropbtn">Stuff</button>
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
-    <a href="#">Link 2</a>
+    <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
     <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
   </div>
 </div>
