--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
           </h4>
           
           <div class="dropdown">
-  <button class="dropbtn">Stuff</button>
+<!--   <button class="dropbtn">Stuff</button>
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
     <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
     <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
-  </div>
+  </div> -->
 </div>
         </div>
       </li>
