--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,15 @@
             (please don't pick someone else's name and make it school
             appropriate)
           </h4>
-          
-          <div class="dropdown">
+
+   <!---<div class="dropdown">
    <button class="dropbtn">Terms And Condi</button>
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
     <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
     <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
   </div> 
-</div>
+</div> ---> 
         </div>
       </li>
     </ul>
