--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,14 @@
             appropriate)
           </h4>
 
-   <!---<div class="dropdown">
+<!--    <div class="dropdown">
    <button class="dropbtn">Terms And Condi</button>
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
     <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
     <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
   </div> 
-</div> ---> 
+</div> -->
         </div>
       </li>
     </ul>
