--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           </h4>
 
           <!--    <div class="dropdown">
-   <button class="dropbtn">Terms And Condi</button>
+   <button class="dropbtn">Secret Button</button>
   <div class="dropdown-content">
     <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
     <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
