🐠⛩ Checkpoint ./public/index.html:9251183/11966 ./public/main.js:9251183/156

--- a/public/index.html
+++ b/public/index.html
@@ -48,15 +48,16 @@
             <!-- Overlay content -->
             <div class="overlay-content">
               <a href="#">About</a>
-              <a href="#" onclick="TermsFuction">Credit</a>
+              <a href="#" onclick="TermsFunction()">Credit</a>
               <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
               <a href="#">Contact</a>
               <a href="https://matias.ma/nsfw/">Samy</a>
 
-              <p id="Credit">
-                Made by Jackson and Samy Disribution Glitch User managenment
+              <p style="display:none;" id="Credit">
+                Made by Jackson and Samy <br>Disribution Glitch <br>User managenment
                 socket.io
               </p>
+              
               
             </div>
           </div>
