💓👨 Checkpoint ./public/index.html:9251183/146:22440109/126 ./public/style.css:9251183/425:22440109/62

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
             <div class="overlay-content">
               <a href="#" onclick="TermsFunction()">Credit</a>
               <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
-              <a href="https://matias.ma/nsfw/">Samy</a>
-
+              <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Samy</a>
+              <a href="https://matias.ma/nsfw/">Samy UwU</a>
               <p style="display:none;" id="Credit">
                 Made by Jackson and Samy <br />Disribution Glitch <br />User
                 managenment socket.io
@@ -60,7 +60,7 @@
           </div>
 
           <!-- Use any element to open/show the overlay navigation menu -->
-          <span onclick="openNav()">More</span>
+          <button onclick="openNav()">More</button>
         </div>
       </li>
     </ul>
