🎣💧 Checkpoint ./public/index.html:26949589/851 ./public/main.js:26949589/1042

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tasis Chat</title>
+    <title>Serplent Web - Global Chat</title>
 
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      href="https://cdn.glitch.com/82587bdf-a6c9-41e1-ad71-6d0f698544cb%2Ftasis_chat_logo_FGo_icon.ico?v=1604833533204"
-    />
+
   </head>
   <body>
     <ul class="pages">
@@ -16,7 +13,7 @@
         <div class="chatArea">
           <ul class="messages"></ul>
         </div>
-        <input class="inputMessage" placeholder="Type here..." />
+        <input class="inputMessage" placeholder="Your Message..." />
       </li>
 
       <li class="login page">
@@ -24,11 +21,6 @@
           <h3 class="title">What's your nickname/username?</h3>
 
           <input class="usernameInput" type="text" maxlength="14" id="usernameInput"/>
-
-          <h4 class="subtitle">
-            (please don't pick someone else's name and make it school
-            appropriate)
-          </h4>
 
           <!--           <div class="dropdown">
    <button class="dropbtn">Secret Button</button>
@@ -44,20 +36,10 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >&times;</a
             >
-
+<hr>
             <!-- Overlay content -->
             <div class="overlay-content">
-              <a href="#" onclick="TermsFunction()">Credit</a>
-              <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
-              <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Samy</a>
-              <a href="https://matias.ma/nsfw/">Samy UwU</a>
-              <p style="display:none;" id="Credit">
-                Made by Jackson and Samy <br />Disribution Glitch <br />User
-                managenment socket.io
-              </p>
-
-            </div>
-          </div>
+              <a href="#" onclick="TermsFunction()">Serplent The Best</a>
 
           <!-- Use any element to open/show the overlay navigation menu -->
           <button onclick="openNav()">More</button>
