🐥🏬 Checkpoint ./public/index.html:31215610/117

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Serplent Web - Global Chat</title>
+    <title>Random Chat</title>
 
     <link rel="stylesheet" href="style.css" />
 
