🌅🎥 Checkpoint ./public/index.html:32669081/226 ./public/main.js:32669081/116

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Random Chat</title>
+    <title>яшка шпрот</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -13,12 +13,12 @@
         <div class="chatArea">
           <ul class="messages"></ul>
         </div>
-        <input class="inputMessage" placeholder="Your Message..." />
+        <input class="inputMessage" placeholder="сообщение..." />
       </li>
 
       <li class="login page">
         <div class="form">
-          <h3 class="title">What's your nickname/username?</h3>
+          <h3 class="title">напиши свой ник если не шпрот</h3>
 
           <input class="usernameInput" type="text" maxlength="14" id="usernameInput"/>
 
@@ -39,10 +39,12 @@
 <hr>
             <!-- Overlay content -->
             <div class="overlay-content">
-              <a href="#" onclick="TermsFunction()">Serplent The Best</a>
+              <a href="#" onclick="TermsFunction()" style="font-size: 5em">яяшка шпрот</a>
+            </div>
+          </div>
 
           <!-- Use any element to open/show the overlay navigation menu -->
-          <button onclick="openNav()">More</button>
+          <button onclick="openNav()">НЕ НАЖИМАЙ</button>
         </div>
       </li>
     </ul>
