📙🔮 Checkpoint ./public/main.js:32669081/961 ./public/index.html:32669081/31

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
           </div>
 
           <!-- Use any element to open/show the overlay navigation menu -->
-          <button onclick="openNav()">НЕ НАЖИМАЙ</button>
+          <button onclick="login()">Зайти</button>
         </div>
       </li>
     </ul>
