🐬🤖 Checkpoint ./public/index.html:32669081/388 ./public/style.css:32669081/68 ./public/main.js:32669081/415

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,6 @@
 
           <input class="usernameInput" type="text" maxlength="20" id="usernameInput"/>
 
-          <!--           <div class="dropdown">
-   <button class="dropbtn">Secret Button</button>
-  <div class="dropdown-content">
-    <a href="https://terms-for-tasis-chat.glitch.me">Terms</a>
-    <a href="https://matias.ma/nsfw/">DONT CLICK ME</a>
-    <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Click Me</a>
-  </div> 
-</div> -->
-
           <div id="myNav" class="overlay">
             <!-- Button to close the overlay navigation -->
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -44,7 +35,7 @@
           </div>
 
           <!-- Use any element to open/show the overlay navigation menu -->
-          <button onclick="login()">Зайти</button>
+          <button class="loginbutton">Зайти</button>
         </div>
       </li>
     </ul>
