🌼🎍 Checkpoint ./public/main.js:32669081/271 ./public/index.html:32669081/626 ./public/style.css:32669081/36

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
         <div class="chatArea">
           <ul class="messages"></ul>
         </div>
-        <input class="inputMessage" placeholder="сообщение..." />
+        <div class="inputs">
+          <input class="inputMessage" placeholder="сообщение...">
+          <button class="send">Отправить</button>
+        </div>
       </li>
 
       <li class="login page">
