Rewound to commit 3b384d58a3bcd103d1503c17e7b439738ac835db + 0 edits

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
       <li class="login page">
         <div class="form">
-          <h3 class="title">Ваш ник</h3>
+          <h3 class="title">напиши свой ник если не шпрот</h3>
 
           <input class="usernameInput" type="text" maxlength="20" id="usernameInput"/>
 
