🙎🍧 Checkpoint ./public/index.html:42265174/83

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>яшка шпрот</title>
+    <title>ALEKS</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -21,7 +21,7 @@
 
       <li class="login page">
         <div class="form">
-          <h3 class="title">напиши свой ник если не шпрот</h3>
+          <h3 class="title">Username</h3>
 
           <input class="usernameInput" type="text" maxlength="20" id="usernameInput"/>
 
@@ -33,12 +33,12 @@
 <hr>
             <!-- Overlay content -->
             <div class="overlay-content">
-              <a href="#" onclick="TermsFunction()" style="font-size: 5em">яяшка шпрот</a>
+              <a href="#" onclick="TermsFunction()" style="font-size: 5em">kewl</a>
             </div>
           </div>
 
           <!-- Use any element to open/show the overlay navigation menu -->
-          <button class="loginbutton">Зайти</button>
+          <button class="loginbutton">Enter</button>
         </div>
       </li>
     </ul>
