✋🚣 Checkpoint ./public/index.html:42265174/31 ./public/main.js:42265174/104

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
           <ul class="messages"></ul>
         </div>
         <div class="inputs">
-          <input class="inputMessage" placeholder="сообщение...">
-          <button class="send">Отправить</button>
+          <input class="inputMessage" placeholder="Message...">
+          <button class="send">Send</button>
         </div>
       </li>
 
