🎪🌼 Checkpoint ./public/main.js:42265174/29 ./public/index.html:42265174/427

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
       </li>
     </ul>
 
+    <script>
+      document.body.innerHTML = document.body.innerHTML.replace("Winerecia", "Hi");
+        }
+    </script>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/main.js"></script>
