--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ALEKS</title>
+    <title>Splat-Chat</title>
 
     <link rel="stylesheet" href="style.css" />
 
