--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </ul>
 
     <script>
-      document.body.innerHTML = document.body.innerHTML.replace("Winerecia", "Hi");
+      document.body.innerHTML = document.body.innerHTML.replace("Splat-Chat", "Hi");
         }
     </script>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
