👚📈 Checkpoint ./public/index.html:51193605/300 ./.glitch-assets:51193605/843

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Splat-Chat</title>
 
     <link rel="stylesheet" href="style.css" />
-
+       <link rel="icon" href="https://cdn.glitch.global/c186b68e-b815-42db-b7c3-74070207691c/Logo.webp?v=1673454242039" />
   </head>
   <body>
     <ul class="pages">
