🍪👨‍👨‍👦 Checkpoint ./public/index.html:51193605/469 ./public/style.css:51193605/28 ./public/termsandconditions.html:51193605/1540

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,6 @@
           <h3 class="title">Username</h3>
 
           <input class="usernameInput" type="text" maxlength="20" id="usernameInput"/>
-
           <div id="myNav" class="overlay">
             <!-- Button to close the overlay navigation -->
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -39,6 +38,10 @@
 
           <!-- Use any element to open/show the overlay navigation menu -->
           <button class="loginbutton">Enter</button>
+           <div class="tac">
+             <br />
+             <a href="/termsandconditions.html"><h2>TERMS AND CONDITIONS</h2></a>
+        </div>
         </div>
       </li>
     </ul>
