👘🍯 Checkpoint ./public/main.js:52163186/1069 ./public/index.html:52163186/7309

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
   <body>
     <ul class="pages">
       <li class="chat page">
+        <div>
+          <button onclick="var aud=new Audio('https://cdn.glitch.global/c186b68e-b815-42db-b7c3-74070207691c/demon-slayer-akaza-vs-rengoku-theme-epic-version-mugen-train-ost-cover.mp3?v=1673532963937');aud.play();">Music</button>
+  
+        </div>
         <div class="chatArea">
           <ul class="messages"></ul>
         </div>
@@ -18,7 +22,6 @@
           <button class="send">Send</button>
         </div>
       </li>
-
       <li class="login page">
         <div class="form">
           <h3 class="title">Username</h3>
